[package]
name = "comfyui-client"
description = "Rust client for comfyui."
version = "0.1.0"
edition = "2024"
authors = ["jmjoy <jmjoy@apache.org>"]
license = "MulanPSL-2.0"
repository = "https://github.com/jmjoy/comfyui-client"
rust-version = "1.85"

[features]
rustls = ["dep:rustls", "reqwest/rustls-tls", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
bytes = "1.10.1"
cfg-if = "1.0.0"
futures-util = "0.3.31"
log = { version = "0.4.26", features = ["kv"] }
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream"] }
rustls = { version = "0.23.23", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["net", "sync"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.2", features = ["url"] }
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4"] }
webpki-roots = "0.26.8"

[dev-dependencies]
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }
